@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2007 Apple Computer, Inc.  All rights reserved.
+ * Copyright (C) 2007 Alp Toker <alp.toker@collabora.co.uk>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -20,40 +20,19 @@
  * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
  * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
  */
 
-#ifndef NotImplemented_h
-#define NotImplemented_h
-
+#include "config.h"
 #include "Logging.h"
-#include <wtf/Assertions.h>
 
-#if PLATFORM(GDK)
-    #define supressNotImplementedWarning() getenv("DISABLE_NI_WARNING")
-#else
-    #define supressNotImplementedWarning() false
-#endif
+namespace WebCore {
 
-#if PLATFORM(QT)
+void InitializeLoggingChannelsIfNecessary()
+{
+    // FIXME: Add a way for the user to specify which
+    // logs he/she would like turned on.
+    LogNotYetImplemented.state = WTFLogChannelOn;
+}
 
-    #include <qglobal.h>
-    #define notImplemented() qDebug("FIXME: UNIMPLEMENTED: %s:%d (%s)", __FILE__, __LINE__, WTF_PRETTY_FUNCTION)
-
-#elif defined(NDEBUG)
-
-#define notImplemented() ((void)0)
-
-#else
-
-#define notImplemented() do { \
-        static bool havePrinted = false; \
-        if (!havePrinted && !supressNotImplementedWarning()) { \
-            WTFLogVerbose(__FILE__, __LINE__, WTF_PRETTY_FUNCTION, &LogNotYetImplemented, "UNIMPLEMENTED: "); \
-            havePrinted = true; \
-        } \
-    } while (0)
-
-#endif // NDEBUG
-
-#endif // NotImplemented_h
+} // namespace WebCore
