@@ -1,3 +1,14 @@
+2007-05-30  Alp Toker  <alp.toker@collabora.co.uk>
+
+        Reviewed by Brady.
+
+        Enable logging in the Gdk port.
+        http://bugs.webkit.org/show_bug.cgi?id=13029
+
+        * wtf/Assertions.cpp:
+        * wtf/Assertions.h: Add WTFLogVerbose which also logs
+        the file, line number and function.
+
 2007-05-30  Mark Rowe  <mrowe@apple.com>
 
         Mac build fix.  Update #include.
